# OpenStack

./: .gitignore  Makefile  README.md  docker-compose.yaml
code/dagster_real_estate/: pyproject.toml
code/dagster_real_estate/src/dagster_real_estate/defs/: constants.py  crawl.py  database.py  dbt.py  jobs.py  resources.py
code/dbt/: .user.yml
code/dbt/bronze/: dbt_project.yml
code/dbt/gold/: dbt_project.yml
code/dbt/silver/: dbt_project.yml
code/dbt_real_estate/bronze/: .user.yml  dbt_project.yml  profiles.yml
code/dbt_real_estate/gold/: .user.yml  dbt_project.yml  profiles.yml
code/dbt_real_estate/silver/: .user.yml  dbt_project.yml  profiles.yml
code/real_estate_dagster/: README.md  pyproject.toml  setup.cfg  setup.py  workspace.yaml
code/real_estate_dagster/real_estate_dagster/: __init__.py  crawl.py  crawl.yaml  database.py  dbt.py  dbt.yaml  end_to_end.py  end_to_end.yaml  predict.py  repository.py
data/notebooks/: Predict_Price_Real_Estate.ipynb
data/spark/notebooks/: Predict_Price_Real_Estate.ipynb  Untitled.ipynb
data/stage/: houses.csv
docker/dagster_dbt/: Dockerfile  profiles.yml  requirements.txt
docker/metabase/: Dockerfile
docker/metabase/conf/: metabase.db.mv.db  metabase.db.trace.db
docker/spark_iceberg_dagster_dbt/: Dockerfile  entrypoint.sh  requirements.txt
docker/spark_iceberg_dagster_dbt/conf/: notebook  profiles.yml  spark-defaults.conf
docker/spark_iceberg_kyuubi/: Dockerfile  entrypoint.sh  requirements.txt  spark-defaults.conf
docker/trino/: Dockerfile
docker/trino/catalog/: warehouse.properties
(+16 files in other folders)
